--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
 
 <head>
     <!-- Required Meta Tags -->
@@ -75,9 +75,9 @@
                     <div class="navbar-end">
                         <!-- Signup button -->
                         <div class="navbar-item">
-                            <a id="#signup-btn" href="kit1-signup.html"
+                            <a id="#signup-btn" href="#signupForm"
                                 class="button button-signup btn-outlined is-bold btn-align light-btn rounded raised">
-                                Sign up
+                                Get Notified
                             </a>
                         </div>
                     </div>
@@ -111,7 +111,7 @@
                     <div class="column is-9 is-offset-1">
                         <figure class="image is-3by2 hero-figure is-pushed">
                             <img class="has-light-shadow" style="border-radius: 2rem;"
-                                src="precompiled/assets/img/app1.jpg"
+                                src="precompiled/assets/img/data_trends.svg"
                                 data-base-url="precompiled/assets/img/graphics/apps/app-2" data-extension=".png" alt="">
                         </figure>
                     </div>
@@ -239,7 +239,7 @@
                 </div>
 
                 <div class="column is-6 has-text-centered">
-                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-1-core.png"
+                    <img class="featured-svg" src="precompiled/assets/img/manage.svg"
                         data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-1" data-extension=".png"
                         alt="">
                 </div>
@@ -278,8 +278,8 @@
                 </div>
 
                 <div class="column is-6 is-offset-1 has-text-centered">
-                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-2-core.png"
-                        data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-2" data-extension=".png"
+                    <img class="featured-svg" src="precompiled/assets/img/add_files.svg"
+                        data-base-url="precompiled/assets/img/add_files.svg" data-extension=".png"
                         alt="">
                 </div>
             </div>
@@ -305,8 +305,8 @@
                 </div>
 
                 <div class="column is-6 has-text-centered">
-                    <img class="featured-svg" src="precompiled/assets/img/graphics/widgets/mini-widget-3-core.png"
-                        data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-3" data-extension=".png"
+                    <img class="featured-svg" src="precompiled/assets/img/sequence.svg"
+                        data-base-url="precompiled/assets/img/sequence.svg" data-extension=".png"
                         alt="">
                 </div>
 
@@ -342,8 +342,8 @@
                 </div>
 
                 <div class="column is-6 is-offset-1 has-text-centered">
-                    <img class="featured-svg-lg" src="precompiled/assets/img/graphics/widgets/mini-widget-4-core.png"
-                        data-base-url="precompiled/assets/img/graphics/widgets/mini-widget-4" data-extension=".png"
+                    <img class="featured-svg-lg" src="precompiled/assets/img/fast.svg"
+                        data-base-url="precompiled/assets/img/fast.svg" data-extension=".png"
                         alt="">
                 </div>
             </div>
@@ -609,7 +609,7 @@
     <!-- Clients -->
 
     <!-- Contact form -->
-    <div class="section is-medium is-relative has-waves-bottom-dark section-feature-grey">
+    <div id="signupForm" class="section is-medium is-relative has-waves-bottom-dark section-feature-grey">
         <div class="container">
             <!-- Title -->
             <div class="section-title-wrapper has-text-centered">
@@ -652,7 +652,7 @@
                                         <label>Company *</label>
                                     </div>
                                 </div> -->
-                                <div class="column is-4">
+                                <div  class="column is-4">
                                     <button type="submit" value="Send"
                                         class="button button-cta btn-align primary-btn btn-outlined is-bold rounded raised no-lh">Sign
                                         me up</button>
